--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-"Under Construction!!!"
+<!DOCTYPE html>
+<html>
+<body>
+
+<a href="https://www.youtube.com/channel/UC5lAXXD8_WHdgTzAFDCCYng">Dunung-dunungan's YouTube channel!</a>
+
+</body>
+</html>
