--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<a href="https://www.youtube.com/channel/UC5lAXXD8_WHdgTzAFDCCYng">Dunung-dunungan's YouTube channel!</a>
+Visit my <a href="https://www.youtube.com/channel/UC5lAXXD8_WHdgTzAFDCCYng">YouTube</a>  channel!
 
 </body>
 </html>
